# chatbot_IA

./: Assistents.ipynb  Assistents_csat_new.ipynb  Assistents_google.ipynb  Cópia de Artigos Central de Ajuda Loggi App.xlsx  FAQ _Atendimento SMB - Migração CX.docx  app.py  criador_assistente_chatbot.ipynb  pyproject.toml  requirements.txt  ui.py
.ipynb_checkpoints/: criador_assistente_chatbot-checkpoint.ipynb
core/: chunking.py  embedding.py  parsing.py  qa.py  utils.py
uploads/: sheet1.json  sheet2.json  sheet3.json
