[tool.poetry]
name = "chatbot IA"
version = "0.1.0"
description = ""
authors = ["Rhaissa <rhaissa.nasser@loggi.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.33.0"
pandas = "^2.2.2"
streamlit = "^1.35.0"
ipykernel = "^6.29.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
